<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PigServerManager</string>
    <string name="hello_world">Hello world!</string>
    <string name="AddServer">增加服务器</string>
    <string name="id">ID</string>
    <string name="Password">密码</string>
    <string name="SavePassword">记住密码</string>
    <string name="Login">登录</string>
    <string name="Port">端口</string>
    <string name="Port2">10727</string>
    <string name="Save">保存</string>
    <string name="IP">IP</string>
    <string name="clientservice">com.github.xzzpig.psm.clientservice</string>
    <string name="ClientServiceBC">com.github.xzzpig.action.clientservicebc</string>

</resources>
